--- a/runtimeOnly/src/main/res/values/strings.xml
+++ b/runtimeOnly/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation" >
     <string name="runtime_only">RuntimeOnly</string>
     <string name="conflict">ConflictRuntimeOnly</string>
 </resources>
